--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,23 @@
+.pokemon-app {
+  width: 800px; 
+  margin: 0 auto;
+}
+
+.pokemon-app__load-more {
+  background-color: rgb(58, 111, 94);
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  border: none;
+  font-size: 1.4em;
+  margin: 20px 0;
+  cursor: pointer;
+}
+
 .promo-card-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 40px;
-  width: 800px; 
-  margin: 0 auto;
 }
 
 .promo-card {
