--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,6 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
 }
-
 .single-pokemon__name {
   text-transform: capitalize;
 }
@@ -50,4 +49,13 @@
 .black-background {
   background-color: black;
   color: white;
+}
+
+.pokemon-app__page-info {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 2em;
+  font-weight: bold;
+  font-family: arial, sans-serif;
 }
