--- a/src/App.scss
+++ b/src/App.scss
@@ -62,3 +62,13 @@
     align-self: center;
   }
 }
+
+.pokemon-app__pages {
+  display: flex;
+  
+
+  button {
+    height: fit-content;
+    align-self: center;
+  }
+}
