--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,14 @@
+*{
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
 
-.pokemon-app {
+.pokemon-list {
   width: 800px; 
   margin: 0 auto;
 
@@ -44,10 +48,15 @@ body {
   border-radius: 10px;
   padding: 20px;
   cursor: pointer;
+  
 
   &:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
+}
+
+a {
+  text-decoration: none;
 }
 
 .single-pokemon {
@@ -55,6 +64,7 @@ body {
   padding: 20px;
   border-radius: 10px;
   cursor: pointer;
+  color: black;
 
   &:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
