--- a/src/App.scss
+++ b/src/App.scss
@@ -1,16 +1,22 @@
 *{
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
+  height: 100vh;
+  width: 100vw;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  display: flex;
+  justify-content: center;
 }
 
 
 
 .pokemon-list {
-  width: 800px; 
-  margin: 0 auto;
+  
+  align-self: flex-start;
 
 
     &__header {
@@ -30,7 +36,7 @@ body {
       border-radius: 10px;
       border: none;
       font-size: 1.4em;
-      margin: 20px 0;
+      margin-bottom: 20px;
       cursor: pointer;
     }
 }
