set max width and margin on default layout"

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@ a {
 }
 
 .pokemon-list {
-  width: 800px; 
   margin: 0 auto;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
@@ -27,8 +26,9 @@ a {
   border-radius: 10px;
   border: none;
   font-size: 1.4em;
-  margin: 20px 0;
+  margin-bottom: 20px;
   cursor: pointer;
+  width: 240px;
 }
 
 .promo-card-container {
