begin responsive navbar

--- a/src/layout/DefaultLayout.css
+++ b/src/layout/DefaultLayout.css
@@ -1,5 +1,52 @@
-.default-layout {
+.default-layout__page-content {
   width: 800px; 
-  margin: 30px auto 0;
+  margin: 0 auto;
+}
 
+.navbar {
+  background-color: rgb(58, 111, 94);
+  color: white;
+  height: 60px;
+  margin-bottom: 20px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5em;
+}
+
+.navbar__menu-item {
+  color: white;
+}
+
+.navbar__content {
+  display: flex;
+  justify-content: space-between;
+  width: 800px;
+}
+
+.navbar__logo {
+  align-self: center;
+  
+}
+
+.navbar__content ul {
+  list-style-type: none;
+  display: flex;
+  gap: 15px;
+}
+
+/* // media query 440px
+// if screen is 440 px or smaller
+  //hide menu items
+  // show hamburger icon */
+
+@media screen and (max-width: 440px) {
+  .navbar__menu-items {
+    display: none;
+  }
+
+  .navbar__hamburger {
+    display: block !important;
+  }
 }
